--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Créditos LS</title>
     <link rel="stylesheet" href="./css/styles.css">
     <script src="js/main.js"></script>
 </head>
@@ -21,6 +21,6 @@
         <li>Estética</li>
     </ul>
     <hr>
-    <p>Ejecuta <strong>DevTools</strong>, y escribe en la consola JS la función: <strong>simularPrestamo()</strong></p>
+    <p>Ejecuta <strong>DevTools</strong>, y escribe en la consola JS la función: <strong>calcularPrestamo()</strong></p>
 </body>
 </html>
