agregando funciones y arrays

--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
 <body>
     <h1>Créditos LS</h1>
     <h2>Usalos para lo que necesites:</h2>
+    <h3>Tipos de créditos a solicitar</h3>
     <ul class="lista">
-        <li>Préstamo personal </li>
-        <li>Comprar un auto </li>
-        <li>Préstamo hipotecario </li>
-        <li>Vacaciones </li>
-        <li>Arreglos domésticos</li>
+        <li>Personal </li>
+        <li>Hipotecario </li>
         <li>Salud</li>
-        <li>Estética</li>
     </ul>
     <hr>
-    <p>Ejecuta <strong>DevTools</strong>, y escribe en la consola JS la función: <strong>calcularPrestamo()</strong></p>
+    <p>Ejecuta <strong>DevTools</strong>, y escribe en la consola JS la función: <strong>iniciarCotizacion()</strong></p>
 </body>
 </html>
